# uds-diagnostics-simulator

./: .gitignore  README.md  package-lock.json  package.json  websocket_bridge.js
client/: index.html  script.js  style.css
data/: did_data.json  did_data.txt
docs/: project_plan.md
server/: CMakeLists.txt  did_manager.cpp  did_manager.h  nlohmann_json.h  uds_protocol.cpp  uds_protocol.h  uds_server.cpp  uds_server_simple.cpp
